# summarum

./: .gitignore  Justfile  README.md  jest.config.js  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: playwright.yml  publish.yaml  tauri_app_build.yaml  test.yaml
docs/adr/: README.md  base_editor.md
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/local-dist/: summarum.desktop
src/lib/: CalculatorTextarea.svelte  Counter.svelte  codemirror_stuff.ts  editor_stuff.js  eval.ts  math_output_widget_decorator.ts  mathjs.grammar  mathjs_lezer.ts  my.grammar  mygutter.ts  output_math_gutter.ts  parser.ts  right_hand_side_gutter.ts
test/: eval.test.ts  eval_semi_complete.test.ts  parser.test.ts  round_off_errors.test.ts  versioning.test.ts
test/lib/: CalculatorTextarea.test.ts  mathjs_lezer.test.ts
tests-examples/: demo-todo-app.spec.ts
tests-playwright/: CalculatorTextarea.spec.ts
